--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<html>
+
+<head>
+    <title>Welcome!</title>
+</head>
+
+<body>
+    <h1>this is my first website</h1>
+
+</body>
+
+
+
+
+</html>
