--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 </head>
 
 <body>
-    <h1>this is my first website</h1>
+    <h1>This is Hua Lun's website</h1>
 
-    <p>test test test test</p>>
+    <h2>View my past projects:</h2>
+    
+    <a href="https://hua-lun.github.io/patient-dashboard-app/">Patient Dashboard</a>
+    
+    <a href="https://ay1920s1-cs2103t-t10-2.github.io/main/team/hua-lun.html" DukeCooks</a>
 
 </body>
 
