--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <a href="https://hua-lun.github.io/patient-dashboard-app/">Patient Dashboard</a>
     
-    <a href="https://ay1920s1-cs2103t-t10-2.github.io/main/team/hua-lun.html" DukeCooks</a>
+    <a href="https://ay1920s1-cs2103t-t10-2.github.io/main/team/hua-lun.html"> DukeCooks</a>
 
 </body>
 
