--- a/index.html
+++ b/index.html
@@ -1,21 +1,211 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
 
-<head>
-    <title>Welcome!</title>
-</head>
+    <title>Hello World, I'm Hua Lun!</title>
+<!--
+Reflux Template
+https://templatemo.com/tm-531-reflux
+-->
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
-<body>
-    <h1>This is Hua Lun's website</h1>
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/templatemo-style.css" />
+    <link rel="stylesheet" href="assets/css/owl.css" />
+    <link rel="stylesheet" href="assets/css/lightbox.css" />
+  </head>
 
-    <h2>View my past projects:</h2>
-    
-    <a href="https://hua-lun.github.io/patient-dashboard-app/">Patient Dashboard</a>
-    
-    <a href="https://ay1920s1-cs2103t-t10-2.github.io/main/team/hua-lun.html"> DukeCooks</a>
+  <body>
+    <div id="page-wraper">
+      <!-- Sidebar Menu -->
+      <div class="responsive-nav">
+        <i class="fa fa-bars" id="menu-toggle"></i>
+        <div id="menu" class="menu">
+          <i class="fa fa-times" id="menu-close"></i>
+          <div class="container">
+            <div class="image">
+              <a href="#"><img src="assets/images/hl-dp1.png" alt="" /></a>
+            </div>
+            <div class="author-content">
+              <h4>Chua Hua Lun</h4>
+              <span>Junior CS Major @ National University of Singapore</span>
+            </div>
+            <nav class="main-nav" role="navigation">
+              <ul class="main-menu">
+                <li><a href="#section1">My Projects</a></li>
+                <li><a href="#section4">Contact Me</a></li>
+              </ul>
+            </nav>
+            <div class="social-network">
+              <ul class="soial-icons">
+                <li>
+                  <a href="https://github.com/hua-lun" target="_blank">
+                    <i class="fa fa-github"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://www.linkedin.com/in/chuahualun/" target="_blank">
+                    <i class="fa fa-linkedin"></i></a>
+                </li>
 
-</body>
+                <li>
+                  <a href="mailto: chuahualun@gmail.com">
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
 
+              </ul>
+            </div>
+            <div class="copyright-text">
+              <p>Copyright 2019 Reflux Design</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <section class="section about-me" data-section="section1">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Things I've made:</h2>
+            <div class="line-dec"></div>
+            <span>
+              I've worked on these projects during my internship, school or free time!
+            </span>
+          </div>
+          <div class="left-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/mix-zoomed-2.png" alt="" />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-text">
+                  <h4>Patient Dashboard</h4>
+                  <p>
+                    Internship project with I2R, A*STAR. <br>
+                    Created a Dashboard web application from Dash and Plotly. <br>
+                    This Dashboard is used to analyse raw clinical data.
+                  </p>
+                  <div class="white-button">
+                    <a href="pd_ug.html" target="_blank">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
+                  <h4>DukeCooks</h4>
+                  <p>
+                    NUS CS2103T Module project work. <br>
+                    Created a desktop command line lifestyle application. <br>
+                    Worked in a group of 5. In-charged of the dashboard portion.
+                  </p>
+                  <div class="white-button">
+                    <a href="https://ay1920s1-cs2103t-t10-2.github.io/main/team/hua-lun.html" target="_blank">Read More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/dukecooks_Ui.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section contact-me" data-section="section4">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Contact Me</h2>
+            <div class="line-dec"></div>
+            <span>
+              Hi! Thank you for visiting my website! <br>
+              I am based in Singapore. <br>
+              If you have any enquiries, feel free to contact me through email or LinkedIn. <br>
+              My contact details appear as icons and are located on the left side of the page. <br>
+            </span
+            >
+          </div>
+        </div>
+      </section>
+    </div>
 
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script>
+      //according to loftblog tut
+      $(".main-menu li:first").addClass("active");
+
+      var showSection = function showSection(section, isAnimate) {
+        var direction = section.replace(/#/, ""),
+          reqSection = $(".section").filter(
+            '[data-section="' + direction + '"]'
+          ),
+          reqSectionPos = reqSection.offset().top - 0;
+
+        if (isAnimate) {
+          $("body, html").animate(
+            {
+              scrollTop: reqSectionPos
+            },
+            800
+          );
+        } else {
+          $("body, html").scrollTop(reqSectionPos);
+        }
+      };
+
+      var checkSection = function checkSection() {
+        $(".section").each(function() {
+          var $this = $(this),
+            topEdge = $this.offset().top - 80,
+            bottomEdge = topEdge + $this.height(),
+            wScroll = $(window).scrollTop();
+          if (topEdge < wScroll && bottomEdge > wScroll) {
+            var currentId = $this.data("section"),
+              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+            reqLink
+              .closest("li")
+              .addClass("active")
+              .siblings()
+              .removeClass("active");
+          }
+        });
+      };
+
+      $(".main-menu").on("click", "a", function(e) {
+        e.preventDefault();
+        showSection($(this).attr("href"), true);
+      });
+
+      $(window).scroll(function() {
+        checkSection();
+      });
+    </script>
+  </body>
 </html>
