Update userguide name

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ https://templatemo.com/tm-531-reflux
                     This Dashboard is used to analyse raw clinical data.
                   </p>
                   <div class="white-button">
-                    <a href="pd_ug.html" target="_blank">Read More</a>
+                    <a href="patient_dashboard-userguide.html" target="_blank">Read More</a>
                   </div>
                 </div>
               </div>
