Remove link and image

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/mix-zoomed-2.png" alt="" />
+                  <img src="" alt="" />
                 </div>
               </div>
               <div class="col-md-6">
@@ -100,9 +100,6 @@ https://templatemo.com/tm-531-reflux
                     Created a Dashboard web application from Dash and Plotly. <br>
                     This Dashboard is used to analyse raw clinical data.
                   </p>
-                  <div class="white-button">
-                    <a href="patient_dashboard-userguide.html" target="_blank">Read More</a>
-                  </div>
                 </div>
               </div>
             </div>
