--- a/index.html
+++ b/index.html
@@ -79,27 +79,73 @@ https://templatemo.com/tm-531-reflux
       <section class="section about-me" data-section="section1">
         <div class="container">
           <div class="section-heading">
-            <h2>Things I've made:</h2>
+            <h1>Things I've made:</h1>
             <div class="line-dec"></div>
             <span>
-              I've worked on these projects during my internship, school or free time!
+              I've worked on these projects during my internships, in school or free time!
             </span>
           </div>
-          <div class="left-image-post">
+          <div class="right-image-post">
             <div class="row">
               <div class="col-md-6">
-                <div class="left-image">
-                  <img src="" alt="" />
+                <div class="left-text">
+                  <h4>DeskTranslate</h4>
+                  <p>
+                    NUS Hack&Roll 2021. <br>
+                    Created a desktop live-translation application with PyQt5. <br>
+                    Worked in a group of 4. In-charged of the translation and optical character recognition. <br>
+                    <br>
+                    Winner of Most Socially Useful Hack
+                  </p>
+                  <div class="white-button">
+                    <a href="https://devpost.com/software/desktranslate" target="_blank">Read More</a>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="right-text">
+                <div class="left-image">
+                  <img src="assets/images/DeskTranslate_zoom_BG_1.gif" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
+                  <h4>Static Program Analyzer</h4>
+                  <p>
+                    NUS CS3203 Module project work. <br>
+                    Created a static program analyzer for the SIMPLE programming language. <br>
+                    Worked in a group of 6. In-charged of software testing.
+                  </p>
+                  <div class="white-button">
+                    <a href="https://github.com/nus-cs3203/team02-win-spa-20s1" target="_blank">Read More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/cs3203.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
                   <h4>Patient Dashboard</h4>
                   <p>
                     Internship project with I2R, A*STAR. <br>
                     Created a Dashboard web application from Dash and Plotly. <br>
                     This Dashboard is used to analyse raw clinical data.
                   </p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/patientdashboard.png" alt="" />
                 </div>
               </div>
             </div>
@@ -111,7 +157,7 @@ https://templatemo.com/tm-531-reflux
                   <h4>DukeCooks</h4>
                   <p>
                     NUS CS2103T Module project work. <br>
-                    Created a desktop command line lifestyle application. <br>
+                    Created a desktop command line lifestyle application using JavaFx. <br>
                     Worked in a group of 5. In-charged of the dashboard portion.
                   </p>
                   <div class="white-button">
@@ -126,6 +172,31 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
           </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
+                  <h4>EE - MRTGame</h4>
+                  <p>
+                    NUS Hack&Roll 2019. <br>
+                    Created a desktop game using Pygame. <br>
+                    Objectives: Find a seat in the train! <br>
+                    Worked in a group of 5. In-charged of making the start and end screen of the game.
+                  </p>
+                  <div class="white-button">
+                    <a href="https://devpost.com/software/ee-mrtgame-ou0vke" target="_blank">Read More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/mrtgame.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+
+
         </div>
       </section>
       <section class="section contact-me" data-section="section4">
