--- a/index.html
+++ b/index.html
@@ -135,6 +135,28 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
+                  <h4>Pet Adoption</h4>
+                  <p>
+                    Google Software Product Sprint 2020. <br>
+                    Created a pet adoption web application using Flask. <br>
+                    Worked in a group of 5. In-charged of website design.
+                  </p>
+                  <div class="white-button">
+                    <a href="https://github.com/hua-lun/pet-adoption" target="_blank">Read More</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/petadoption.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
                   <h4>Patient Dashboard</h4>
                   <p>
                     Internship project with I2R, A*STAR. <br>
@@ -168,6 +190,26 @@ https://templatemo.com/tm-531-reflux
               <div class="col-md-6">
                 <div class="left-image">
                   <img src="assets/images/dukecooks_Ui.png" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
+                  <h4>On the Pill</h4>
+                  <p>
+                    NUS Orbital Project. <br>
+                    CP2106: Independent Software Development Project. <br>
+                    Created a medication reminder application using Android Studios. <br>
+                    Worked in group of 2. In-charged of making the exercise database.
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/orbital.png" alt="" />
                 </div>
               </div>
             </div>
