Edit minor changes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ https://templatemo.com/tm-531-reflux
                   <p>
                     NUS CS3203 Module project work. <br>
                     Created a static program analyzer for the SIMPLE programming language. <br>
-                    Worked in a group of 6. In-charged of software testing.
+                    Worked in a group of 6. In-charged of system testing.
                   </p>
                 </div>
               </div>
