--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Final Year Computer Science Major @ National University of Singapore</p>
+                <p class="masthead-subheading font-weight-light mb-0">Recent Computer Science Graduate @ National University of Singapore</p>
             </div>
         </header>
         <!-- Hackathon Section-->
@@ -67,6 +67,33 @@
                 </div>
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
+                    <!-- Portfolio Item 12-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal12">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/images/know_the_way.gif" alt="" />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 11-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal11">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/images/get_the_formuoli.gif" alt="" />
+                        </div>
+                    </div>
+                    <!-- Portfolio Item 10-->
+                    <div class="col-md-6 col-lg-4 mb-5">
+                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal10">
+                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/images/Poetic Shark_ver2.gif" alt="" />
+                        </div>
+                    </div>
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
@@ -237,7 +264,7 @@
                     <div class="col-lg-4 ml-auto">
                         <p class="lead">
                             Thanks for visiting my portfolio page! <br>
-                            I am a final year computer science student, with a focus area in software engineering. <br>
+                            I am a recent computer science graduate, with a focus area in software engineering. <br>
                             In my free time, I like to participate in hackathons and play tetris! <br>
                             My contacts can be found at the bottom banner. Click on the icons for the details.
                         </p>
@@ -245,6 +272,8 @@
                     <div class="col-lg-4 mr-auto">
                         <p class="lead">
                             The following are my awards from past hackathons: <br>
+                            <a href="https://devpost.com/software/know-the-way" target="_blank" style="color: #0e6251">MapHacks 2021 | Third Overall & Most Creative Use of Twilio</a> <br>
+                            <a href="https://devpost.com/software/get-the-formuoli" target="_blank" style="color: #0e6251">Bon Hacketit 2.0 2021 | Mom’s Spaghetti Hack</a> <br>
                             <a href="https://devpost.com/software/all-together" target="_blank" style="color: #0e6251">SelfieHacks 2021 | Best Forem Community</a> <br>
                             <a href="https://devpost.com/software/agent-bucky" target="_blank" style="color: #0e6251">Hacky Birthday MLH! 2021 | Second Overall</a> <br>
                             <a href="https://devpost.com/software/is-it-too-late-to-revert-to-old-commits" target="_blank" style="color: #0e6251">Hacktoon 2021 | Best Domain Name from GoDaddy Registry</a> <br>
@@ -360,6 +389,144 @@
             <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a>
         </div>
         <!-- Hackathon Modals-->
+        <!-- Portfolio Modal 12-->
+        <div class="portfolio-modal modal fade" id="portfolioModal12" tabindex="-1" role="dialog" aria-labelledby="portfolioModal12Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal12Label">Know The Way</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Video-->
+                                    <!-- <img class="img-fluid rounded mb-5" src="assets/img/images/DeskTranslate_zoom_BG_1.gif" alt="" /> -->
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/FLmpdmygEI0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <!-- Portfolio Modal - Text-->
+                                    <h3>MapHacks 2021 | Third Overall & Most Creative Use of Twilio</h3>
+                                    <a href="https://devpost.com/software/know-the-way" target="_blank"> Link to Devpost</a>
+                                    <div class="text-left">
+                                        Know the Way is your travel companion chatbot. It has two main functions to assist travellers and delivery people. <br>
+
+                                        1. Route optimization ensures a quick and easy way for users to plan their travel routes, be it for recreational travel or to optimize their delivery schedule. <br>
+
+                                        2. Provides destination suggestions. The user can ask the chatbot for suggested destinations for a given location,
+                                        and the bot will find and list a few to help get them started with trip planning.
+                                    </div>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio Modal 11-->
+        <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" role="dialog" aria-labelledby="portfolioModal11Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal11Label">Get The Formuoli</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Video-->
+                                    <!-- <img class="img-fluid rounded mb-5" src="assets/img/images/DeskTranslate_zoom_BG_1.gif" alt="" /> -->
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/A8PQ_13Ez1Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <!-- Portfolio Modal - Text-->
+                                    <h3>Bon Hacketit 2.0 2021 | Mom’s Spaghetti Hack</h3>
+                                    <a href="https://devpost.com/software/get-the-formuoli" target="_blank"> Link to Devpost</a>
+                                    <div class="text-left">
+                                        Get The Formuoli, a WhatsApp bot that removes the hassle of cooking <br>
+                                        1. For example if you see a meal on a menu you'd like to try to make at home,
+                                        or see someone post a photo of a meal on social media, you can take a picture or
+                                        screenshot the image and simply send it to our WhatsApp chatbot and get all the
+                                        information you need right away without any further effort required! <br>
+
+                                        2. Maybe you are at the grocery store and you thought of making an apple pie.
+                                        Now, there is no need to panic and search up what ingredients are needed.
+                                        With Get The Formuoli, you can get the ingredients for any dish in 1 short message.
+                                    </div>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio Modal 10-->
+        <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-labelledby="portfolioModal10Label" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                    </button>
+                    <div class="modal-body text-center">
+                        <div class="container">
+                            <div class="row justify-content-center">
+                                <div class="col-lg-8">
+                                    <!-- Portfolio Modal - Title-->
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal10Label">Poetic Shark</h2>
+                                    <!-- Icon Divider-->
+                                    <div class="divider-custom">
+                                        <div class="divider-custom-line"></div>
+                                        <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                                        <div class="divider-custom-line"></div>
+                                    </div>
+                                    <!-- Portfolio Modal - Video-->
+                                    <!-- <img class="img-fluid rounded mb-5" src="assets/img/images/DeskTranslate_zoom_BG_1.gif" alt="" /> -->
+                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/96vqFZPM1qE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <!-- Portfolio Modal - Text-->
+                                    <h3>SharkHacks3 2021</h3>
+                                    <a href="https://devpost.com/software/poetic-shark" target="_blank"> Link to Devpost</a>
+                                    <div class="text-left">
+                                        It's all sharks, the Poetic Shark discord bot <br>
+                                        1. <b>/shark</b> is the main star of Poetic Shark. Express your feelings, emphasise your emotions, express your words with an accompanying image.<br>
+
+                                        2. <b>/blahaj</b> is there, so you know where to find Blåhaj sharks in IKEA.<br>
+
+                                        3. <b>/randomsharkfact</b> gives informative information for a random shark species.<br>
+
+                                        4. <b>/frenzy</b> allows you to show excitement. Or, drown out the Discord chat if it gets too boring.<br>
+                                        a. Sends out a wave of 🦈 emojis to the Discord chat.
+                                    </div>
+                                    <button class="btn btn-primary" data-dismiss="modal">
+                                        <i class="fas fa-times fa-fw"></i>
+                                        Close Window
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Portfolio Modal 1-->
         <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
             <div class="modal-dialog modal-xl" role="document">
