--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Hua Lun's Portfolio</title>
+        <meta http-equiv="refresh" content="0; URL=https://www.chuahualun.dev">
+        <link rel="canonical" href="https://www.chuahualun.dev">
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
